--- a/templates/index.html
+++ b/templates/index.html
@@ -85,9 +85,9 @@ crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
-
-  <!-- Our JavaScript  NEED TO UPDATE FILE PATH-->
-  <script type="text/javascript" src="static/js/logic.js"></script>
+<!-- Our JavaScript  NEED TO UPDATE FILE PATH  -->
+  <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
+  
 
 </body>
 
