--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@ crossorigin="" />
     crossorigin=""></script>
 <!-- Our JavaScript  NEED TO UPDATE FILE PATH  -->
   <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
-  
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 </body>
 
