adding CSS file

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Near Earth Object</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../style.css">
 
 <!-- Leaflet CSS -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -52,7 +53,7 @@ crossorigin="" />
         </div>
 
 <!-- Scatter Plot -->
-        <div class="col-sm-8 bg-info justify-content-between">
+        <div class="col-sm-8 bg-info justify-content-between graph-container">
             <div id="scatter">Scatter Plot</div>
         </div>
       </div>
@@ -67,10 +68,10 @@ crossorigin="" />
 
 <!-- Gauge and Bubble Chart -->
     <div class="row">
-      <div class="col-md-4 col-sm-12 bg-success justify-content-between">
+      <div class="col-md-4 col-sm-12 bg-success justify-content-between graph-container">
         <div id="gauge">Risk Gauge</div>
       </div>
-      <div class="col-md-8 col-sm-12 bg-success justify-content-between">
+      <div class="col-md-8 col-sm-12 bg-success justify-content-between graph-container">
         <div id="bubble">Bubble Chart</div>
       </div>
     </div>
