fixed some chart stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@ crossorigin="" />
         </div>
 
 <!-- Scatter Plot -->
-        <!-- <div class="col-sm-8 bg-info justify-content-between graph-container"> --> -->
+        <!-- <div class="col-sm-8 bg-info justify-content-between graph-container"> -->
         <div class="col-sm-8">
             <div id="scatter"></div>
         </div>
