--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <!-- Leaflet CSS -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
 integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-crossorigin="" />  
+crossorigin="" />
 
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
@@ -23,10 +23,10 @@ crossorigin="" />
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1 class="font-weight-bold">NEO Dashboard</h1>
+        <h1 class="dashboard">NEO Dashboard</h1>
 
 <!-- lets make this a more exciting tag line -->
-        <p class="font-weight-bold">Use the interactive charts to explore the NEO datasets</p>
+        <p class="dashboard">Use the interactive charts to explore the NEO datasets</p>
       </div>
     </div>
 
@@ -38,14 +38,21 @@ crossorigin="" />
       </div>
 
 <!-- Metadata Card-->
-      <div class="card col-sm-10 " style="width: 18rem;">
+      <!-- <div class="card col-sm-10 " style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title"></h5>
           <h6 class="card-subtitle mb-2 text-muted">NEO Metadata</h6>
           <p id="sample-metadata" class="card-text"></p>
         </div>
       </div>
-    </div>
+    </div> -->
+    <div class="row">
+      <div class="table-responsive">
+        <table id='metadatatable' class="table table-bordered">
+          ...
+        </table>
+      </div>
+      </div>
 
 
 <!-- Scatter Plot -->
@@ -56,13 +63,19 @@ crossorigin="" />
   </div>
 
 <!-- Data Table -->
+<div class="row">
+<!-- <div class="table-responsive"> -->
+  <table id='sentrydata' class="table table-striped">
+  </table>
+</div>
+
 <!-- <div class="row">
   <div class="col-sm-12 d-flex justify-content-between"> 
     {{Table | safe}}
   </div>
 </div>
 
-<!-- Gauge and Bubble Chart  -->
+<-- Gauge and Bubble Chart  -->
 
     <div class="row">
       <div class="col-md-4">
@@ -72,8 +85,7 @@ crossorigin="" />
       <div class="col-md-8">
         <div id="bubble"></div>
       </div>
-    </div>
-  </div>   
+    </div> 
 
 <!-- Fire Ball Map -->
  <div class="container">
@@ -85,8 +97,8 @@ crossorigin="" />
   </div>  
 
   <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
     crossorigin=""></script>
 
 <!-- Our JavaScript  NEED TO UPDATE FILE PATH  -->
