--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Near Earth Object</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" src="{{ url_for('static', filename='style.css') }}">
 
 <!-- Leaflet CSS -->
@@ -15,6 +15,7 @@ integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIpt
 crossorigin="" />
 
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 
 </head>
 
@@ -46,13 +47,14 @@ crossorigin="" />
         </div>
       </div>
     </div> -->
-    <div class="row">
+    <div class="col-sm-10">
       <div class="table-responsive">
         <table id='metadatatable' class="table table-bordered">
-          ...
         </table>
       </div>
-      </div>
+    </div>
+  </div>
+
 
 
 <!-- Scatter Plot -->
