--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Near Earth Object</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" src="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="/static/style.css">
 
 <!-- Leaflet CSS -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -19,8 +19,8 @@ crossorigin="" />
 
 </head>
 
-<body>
-
+<body class='background' style="background-image: url('https://images.unsplash.com/photo-1608754482805-6f630357358b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8c3BhY2UlMjBiYWNrZ3JvdW5kfGVufDB8fDB8fA%3D%3D&w=1000&q=80');">
+<!-- <div class='background' style="background-image: url('https://images.unsplash.com/photo-1608754482805-6f630357358b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8c3BhY2UlMjBiYWNrZ3JvdW5kfGVufDB8fDB8fA%3D%3D&w=1000&q=80');"> -->
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
@@ -32,10 +32,13 @@ crossorigin="" />
     </div>
 
 <!-- Dropdown -->
+  <div class="droptable">
     <div class="row">
       <div class="col-sm-2">
         <h5>Select an NEO</h5>
         <select id="selDataset" onchange="optionChanged(this.value)"></select>
+        <br>       <br>       <br>
+        <button type="button" class="btn btn-outline-danger">Fireball Map</button>
       </div>
 
 <!-- Metadata Card-->
@@ -54,22 +57,26 @@ crossorigin="" />
       </div>
     </div>
   </div>
+  </div>
 
 
 
 <!-- Scatter Plot -->
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-sm-12">
         <div id="scatter"></div>
     </div>
   </div>
 
 <!-- Data Table -->
-<div class="row">
-<!-- <div class="table-responsive"> -->
-  <table id='sentrydata' class="table table-striped">
-  </table>
+<div id='sentrytable' class="row mt-3">
+<div class="col-md-12">
+  <div class="table-wrapper-scroll-y my-custom-scrollbar">
+  <table id='sentrydata' class="table table-bordered table-striped mb-0"></table>
 </div>
+</div>
+</div>
+
 
 <!-- <div class="row">
   <div class="col-sm-12 d-flex justify-content-between"> 
@@ -79,7 +86,7 @@ crossorigin="" />
 
 <-- Gauge and Bubble Chart  -->
 
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-md-4">
         <div id="gauge"></div>
       </div>
@@ -88,15 +95,17 @@ crossorigin="" />
         <div id="bubble"></div>
       </div>
     </div> 
-
+  </div>
 <!-- Fire Ball Map -->
- <div class="container">
+ <!-- <div class="container"> -->
     <div class="row">
       <div class="col-sm-12">
         <div id="map"></div>
       </div>
     </div>
-  </div>  
+  <!-- </div>   -->
+
+
 
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
