--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,8 @@ crossorigin="" />
         <h5>Select an NEO</h5>
         <select id="selDataset" onchange="optionChanged(this.value)"></select>
         <br>       <br>       <br>
-        <button type="button" class="btn btn-outline-danger">Fireball Map</button>
+        <!-- <button type="button" class="btn btn-outline-danger" href="/fireball">Fireball Map</button> -->
+        <a href="/fireballmap" class="btn btn-outline-danger" role="button">Fireball Map</a>
       </div>
 
 <!-- Metadata Card-->
