--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,7 @@ crossorigin="" />
 
 <!-- Metadata Table-->
     <div class="col-sm-10">
+      <h3>Metadata Table</h3>
       <div class="table-responsive">
         <table id='metadatatable' class="table table-bordered">
         </table>
@@ -60,6 +61,7 @@ crossorigin="" />
 <!-- Data Table -->
 <div id='sentrytable' class="row mt-3">
 <div class="col-md-12">
+  <h3>Sentry Data Table</h3>
   <div class="table-wrapper-scroll-y my-custom-scrollbar">
   <table id='sentrydata' class="table table-bordered table-striped mb-0"></table>
 </div>
